--- a/about.html
+++ b/about.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - CSS Design Company</title>
+  <title>About Us - Elegant Web Design Studio</title>
 </head>
-<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, sans-serif; margin: 0; background-color: #f8f8f8; color: #333;">
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; background-color: #F5F5F5; color: #333;"> 
 
   <!-- Hero Section -->
-  <section style="background: linear-gradient(to right, #ff7e5f, #feb47b); color: white; text-align: center; padding: 50px 20px;">
+  <section style="background: linear-gradient(to right, #DD88CF, #F8E7F6); color: ; text-align: center; padding: 50px 20px;">
     <h1>About Us</h1>
     <p>Your trusted partner for modern, responsive web design.</p>
-    <a href="contact.html" style="background: #fff; color: #333; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Get in Touch</a>
+    <a href="contact.html" style="background: #fff; color: #4B164C; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Get in Touch</a>
   </section>
-
 
   <section style="text-align: center; padding: 40px 20px;">
     <h2>Our Story</h2>
     <p style="max-width: 800px; margin: 0 auto;">We make great web design accessible to everyone. Transforming websites into beautiful and functional digital experiences is our passion.</p>
   </section>
-
 
   <section style="text-align: center; padding: 40px 20px;">
     <h2>Meet the Team</h2>
@@ -34,17 +32,15 @@
     </div>
     <div style="display: inline-block; margin: 10px; text-align: center;">
         <p>Subha M - Web Designer</p>
-      </div>
+    </div>
   </section>
 
- 
-  <section style="background-color: #feb47b; color: white; text-align: center; padding: 40px 20px;">
+  <section style="background-color: #DD88CF; color: ; text-align: center; padding: 40px 20px;">
     <h2>Let’s Build Something Amazing Together!</h2>
-    <a href="contact.html" style="background: #fff; color: #333; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Contact Us Now</a>
+    <a href="contact.html" style="background: #fff; color: black; padding: 10px 20px; text-decoration: none; border-radius: 10px;">Contact Us Now</a>
   </section>
 
- 
-  <footer style="background-color: #333; color: white; text-align: center; padding: 10px;">
+  <footer style="background-color: #4B164C; color: white; text-align: center; padding: 10px;">
     <a href="home.html" style="color: white; text-decoration: none; margin: 0 10px;">Home</a>
     <a href="features.html" style="color: white; text-decoration: none; margin: 0 10px;">Services</a>
     <a href="contact.html" style="color: white; text-decoration: none; margin: 0 10px;">Contact Us</a>
