--- a/features.html
+++ b/features.html
@@ -21,12 +21,12 @@
             </style>
     </head>
     <body>
-        <header>
-            <h1><b><center>CSS FEATURES</center></b></h1>
+        <header style="background-color: #4B164C;">
+            <h1 style="color: aliceblue;"><b><center>CSS FEATURES</center></b></h1>
         </header>
         <div class="mycontainer">
 
-            <div style="background-color:darkgray;">
+            <div style="background-color:#F8E7F6">
               <h2><center>1. Styling and Design</center></h2>
               <ul>
                 <li><b>Color and Backgrounds:</b> Allows setting text, background, and border colors.</li></br>
@@ -38,7 +38,7 @@
             <img src="font.png" height="200px" alt="img not available "class="center"/>     
             </div>
             
-            <div style="background-color:lightgrey;">
+            <div style="background-color:#DD88CF;">
               <h2><center>2. Selectors</center></h2>
               <ul>
                 <li><b>Simple Selectors: </b> CSS simple selectors are used to target HTML elements based on their name, class, ID, or other attributes.</li></br>
@@ -50,7 +50,7 @@
             <img src="combinator.png" height="200px" width="230px" alt="img not available " class="center"/>     
             </div>
             
-            <div style="background-color:darkgrey">
+            <div style="background-color:#c560c7">
                 <h2><center>3. Positioning and layout</center></h2>
                 <ul>
                   <li><b>Positioning: </b>CSS positioning defines how elements are placed within a web page. It allows you to control the layout, stacking order, and alignment of elements.(e.g: Static, relative, absolute, fixed, and sticky)</li></br>
